# PraxisProjektSemester4

./: main.py
MiniMetroBot/: __main__.py  pyproject.toml
MiniMetroBot/core/: ScreenDetector.py
MiniMetroBot/docs/: LICENSE  README.md
MiniMetroBot/minimetrobot/: __main__.py
MiniMetroBot/minimetrobot/core/: ScreenDetector.py  __init__.py
MiniMetroBot/minimetrobot/models/: __init__.py  labels.yaml
MiniMetroBot/minimetrobot/yolo_tuning/: yolo_model_tuning.py
MiniMetroBot/minimetrobot/yolo_tuning/images_annotated/: README.roboflow.txt  data.yaml
MiniMetroBot/models/: __init__.py
MiniMetroBot/yolo_tuning/: yolo_model_tuning.py
MiniMetroBot/yolo_tuning/model_tuned/round_optimized_with_AdamW_False_20230810_1824/: args.yaml
MiniMetroBot/yolo_tuning/model_tuned/round_optimized_with_Adam_False_20230806_1623/: args.yaml
MiniMetroBot/yolo_tuning/model_tuned/round_optimized_with_Adam_False_bs_32_20230823_1029/: args.yaml  results.csv
MiniMetroBot/yolo_tuning/model_tuned/round_optimized_with_Adam_False_bs_8_20230822_1901/: args.yaml
MiniMetroBot/yolo_tuning/model_tuned/round_optimized_with_Adam_True_20230820_1932/: args.yaml  results.csv
MiniMetroBot/yolo_tuning/model_tuned/round_optimized_with_Adam_True_bs_12_20230823_1948/: args.yaml
MiniMetroBot/yolo_tuning/model_tuned/round_optimized_with_Adam_True_bs_16_20230823_1446/: args.yaml
MiniMetroBot/yolo_tuning/model_tuned/round_optimized_with_Adam_True_bs_6_20230823_2107/: args.yaml  results.csv
MiniMetroBot/yolo_tuning/model_tuned/round_optimized_with_Adam_True_bs_8_20230823_1933/: args.yaml
(+548 files in other folders)
